syntax = "proto3";

package articles;

option go_package = "./proto/articles;articles";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

service Articles {
  rpc Create(CreateRequest) returns (SingleArticleResponse);
  rpc GetByCustomId(ArticleCustomIdRequest) returns (SingleArticleResponse);
  rpc GetMany(GetManyRequest) returns (ShortArticlesResponse);
  rpc Update(UpdateRequest) returns (SingleArticleResponse);
  rpc Delete(ArticleCustomIdRequest) returns (SingleArticleResponse);
}

message CreateRequest {
  string custom_id = 1;
  string title = 2;
  string thumbnail = 3;
  google.protobuf.Struct content = 4;
  bool is_draft = 5;
}

message SingleArticleResponse {
  uint32 id = 1;
  string custom_id = 2;
  uint32 author_id = 3;
  string title = 4;
  string thumbnail = 5;
  google.protobuf.Struct content = 6;
  bool is_draft = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message ArticleCustomIdRequest {
  string custom_id = 1;
}

message GetManyRequest {
  uint32 offset = 1;
  uint32 count = 2;
  bool is_drafts = 3;
}

message ShortArticle {
  uint32 id = 1;
  string custom_id = 2;
  uint32 author_id = 3;
  string title = 4;
  string thumbnail = 5;
  string short_content = 6;
  bool is_draft = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message ShortArticlesResponse {
  repeated ShortArticle articles = 1;
}

message UpdateRequest {
  string custom_id = 1;
  string title = 2;
  string thumbnail = 3;
  google.protobuf.Struct content = 4;
  bool is_draft = 5;
}
